first commit new commit

--- a/service.html
+++ b/service.html
@@ -32,7 +32,7 @@
             <div class="banner_inner_data">
                 <div class="container">
                     <h1>Service</h1>
-                    <p><span class="home_span">Home</span> / <span class="pages_span">Pages</span> / Servic</p>
+                    <p><span class="home_span">Home</span> / <span class="pages_span">Pages</span> / Service</p>
                 </div>
             </div>
         </div>
