--- a/index.html
+++ b/index.html
@@ -562,7 +562,7 @@
                                 <li><a href="/contact.html"> Contact us</a></li>
                                 <li><a href="/Privacy-policy.html"> Privacy policy</a></li>
                                 <li><a href="/terms-and-condition.html"> Terms & Condition</a></li>
-                                <li><a href="/"> FAQs & Help</a></li>
+                                <!-- <li><a href="/"> FAQs & Help</a></li> -->
                             </ul>
                         </div>
                         <div class="main_contact">
